Finished adding about me content, further adjustments for responsiveness, added new links for nav to adjust for size of fixed nav bar covering the top of the section

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,12 @@ header {
   margin-top: 100px;
   padding-left: 100px;
   font-family: Montserrat;
-  font-size: 1.5rem;
+  font-size: 1rem;
+}
+
+.headline {
+  font-size: 2.5rem;
+  font-style: italic;
 }
 
 .navigation {
@@ -52,6 +57,18 @@ header {
   background-size: cover;
   border-bottom: 2px solid #F0F0F0;
   color: white;
+}
+
+/* Keeps the buttons from moving closer together on smaller sizes */
+.nav-buttons {
+  white-space: nowrap;
+}
+
+/* Adds top spacing when buttons move to below other text on small screens */
+@media (max-width: 768px) {
+  .nav-buttons {
+    margin-top: 20px;
+  }
 }
 
 .nav-buttons a {
@@ -81,6 +98,12 @@ header {
 
 /* ================================ About ================================= */
 /* Sets the background color outside of the bootstrap container */
+/* Moves the about link down to compensate for the fixed nav bar */
+#about-link {
+  position: absolute;
+  top: -120px;
+}
+
 .about-container {
   background-color: #E7E7E7;
   width: 100%;
@@ -88,6 +111,7 @@ header {
 
 #about {
   padding-top: 40px;
+  position: relative;
 }
 
 #about h1 {
@@ -136,6 +160,11 @@ header {
 }
 
 /* ================================= Work ================================= */
+#work-link {
+  position: absolute;
+  top: -120px;
+}
+
 .project {
   background-color: lightblue;
   width: 100%;
@@ -143,6 +172,7 @@ header {
 
 #work {
   color: white;
+  position: relative;
 }
 
 .work-intro {
@@ -182,6 +212,19 @@ header {
   overflow-x: hidden;
   border: 5px solid gray;
   margin: 15px;
+  background-color: white;
+}
+
+/* Shrinks image box on small screens to prevent showing blank space if the image is short */
+@media (max-width: 1020px) {
+  .image-container {
+    height: 275px;
+  }
+}
+@media (max-width: 768px) {
+  .image-container {
+    height: 225px;
+  }
 }
 
 .project-link {
